down arrow z-index fix

--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -53,6 +53,7 @@ nav {
     align-items: flex-start;
 
     transform: translateX(-100%);
+    z-index: 100;
 
     will-change: transform;
     transition: transform 0.5s;
